--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@schedule-x/react": "^2.21.2",
     "@schedule-x/theme-default": "^2.21.1",
     "@tailwindcss/vite": "^4.0.17",
+    "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
