--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
-    "@mui/icons-material": "^7.0.0",
-    "@mui/material": "^7.0.0",
-    "@mui/styled-engine-sc": "^7.0.0",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
+    "@mui/x-date-pickers": "^7.28.2",
     "@schedule-x/calendar": "^2.21.1",
     "@schedule-x/drag-and-drop": "^2.21.1",
     "@schedule-x/event-modal": "^2.21.1",
@@ -23,12 +23,14 @@
     "@schedule-x/react": "^2.21.2",
     "@schedule-x/theme-default": "^2.21.1",
     "@tailwindcss/vite": "^4.0.17",
+    "@types/uuid": "^10.0.0",
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
     "schedule-x": "^0.0.9",
-    "styled-components": "^6.1.16"
+    "styled-components": "^6.1.16",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
