--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@schedule-x/theme-default": "^2.21.1",
     "@tailwindcss/vite": "^4.0.17",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
