--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/connect-history-api-fallback": "^1.5.4",
     "@types/fullcalendar": "^3.8.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
+    "connect-history-api-fallback": "^2.0.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
